    and can cause problems (LP: #349937).
  * Permit dmraid-style /dev/mapper/* device names in advanced boot loader
    selector, as well as disk and partition numbers over 9 (LP: #342354).
  * Remove /target/var/lib/apt-xapian-index per Michael Vogt, since it needs
    to be rebuilt based on the installed system's sources.list, and apt's
    cron.daily script and/or synaptic will do this.

  [ Evan Dandrea ]
  * Make the partman/unmount_active dialog a yes or no question
    (LP: #346589).
  * Sort the list of regions on the timezone page (LP: #344334).
  * Merge Roman's city placement code into the GTK frontend.
  * Work in bytes rather than percentages in the partition bar code
    (LP: #336203).
  * Fix partition bar slider (for resizing) code by adding correct
    calcuations for bounds checking and slider positioning.
  * Properly encode data from os-prober (LP: #345573).
  * Make sure that the before and after partitioning bars use the same
    colors for the same partitions (LP: #289324).
  * Fix the placement of the partition bars in scrolled windows when
    necessary.
  * Don't let the partition bars eat up any extra space.
  * Move selecting a disk from radio buttons to a drop down box on the
    automatic partitioning page.  This saves a lot of space when
    multiple disks are present and makes the code a little cleaner
    (LP 325958).

  [ Roman Shtylman ]
  * Partitions bars show and hide as appropriate
  * Proper projection points for the cities in kde Timezone map

  [ Mario Limonciello ]
  * Mythbuntu:
    - Don't prevent going forward in the UI if the connection test fails.
      It's no longer necessary for 9.04 to actually work. (LP: #343432)

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Mar 2009 12:02:04 +0000

ubiquity (1.11.20) jaunty; urgency=low

  * Disable the introduction page in preparation for the 9.04 Beta.
  * Automatic update of included source packages: grub-installer
    1.36ubuntu4, partman-partitioning 65ubuntu1.
