@@ -30,6 +30,8 @@ ubiquity (1.12.0) UNRELEASED; urgency=low
   * Remove /target/var/lib/apt-xapian-index per Michael Vogt, since it needs
     to be rebuilt based on the installed system's sources.list, and apt's
     cron.daily script and/or synaptic will do this.
+  * Preserve ordering of automatic partitioning choices when replacing them
+    with our customised strings (LP: #351547).
 
   [ Evan Dandrea ]
   * Make the partman/unmount_active dialog a yes or no question
